# LayoutArena

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  architect.md  pyproject.toml
layout-generator/: .env  README.md  asset_library.py  extract_assets.py  llm.py  main.py  renderer.py  tools.py
layout-generator/api-render/: .gitignore  FLOW_DIAGRAM.md  README.md  next.config.js  package-lock.json  package.json  styles.css  test-local-image.js  test-memory-leak.js  test-render-performance.js  vercel.json
layout-generator/assets/: manifest.json
layoutarena/: __init__.py
layoutarena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
layoutarena/attacks/: __init__.py  adaptive_evasion.py  base.py  exploration_abuse.py  hidden_content.py  off_brand_decorative.py  quality_sabotage.py  stealth_waste.py
layoutarena/control/: __init__.py  base.py  bounded.py  enforcement.py  monitor.py  stewardship.py
layoutarena/env/: __init__.py  canvas.py  constraints.py  elements.py  models.py  scoring.py  tools.py
layoutarena/experiments/: __init__.py  briefs.py  (+6 more)
report/: new_experiments_report.md  notes.md  paper.tex  report.md  research_upgrade_map.md
scripts/: generate_new_plots.py  generate_plots.py  generate_trajectories.py  regen_qualitative_figs.py  run_ablation.py  run_batch.py  run_llm_batch.py  run_single.py
tests/: LayoutArena.code-workspace  conftest.py  test_attacks.py  test_constraints.py  test_elements.py  test_env.py  test_llm_env.py  test_monitor.py  test_output.py  test_protocols.py  test_run_eval.py  test_scoring.py
(+37 files in other folders)
